feat: Implement Session Notes Query Engine with advanced entity resolution and contextual search capabilities
- Added SessionNotesQueryEngine class for processing natural language queries on D&D session notes.
- Introduced entity resolution with fuzzy matching and placeholder entities.
- Developed methods for retrieving relevant sessions based on user intention and context hints.
- Created detailed context building for various query intentions, including character status, event sequences, NPC info, and more.
- Implemented scoring and sorting of contexts based on relevance.
- Added new data structures in session_types.py for query engine input and results.
- Established SessionNotesStorage class for managing session notes storage and retrieval using pickle files.
- Enhanced session and entity management with methods for searching, filtering, and metadata handling.

--- a/knowledge_base/session_notes/06-30-25.md
+++ b/knowledge_base/session_notes/06-30-25.md
@@ -4,46 +4,186 @@ Date: 2025-06-30
 ## Summary
 The party found themselves locked in the Theater of Blood, deep in debate over whether Duskryn should give up his Eldarith to Ghul'Vor, the ex-god of darkness. Despite divine warnings of "failure," Duskryn proceeded with the catastrophic Black Benediction ritual, resulting in his soul being trapped in a mirror and his body nearly killed, forcing the party to choose whether to enter a cosmic rift to save him.
 
-## Key Events
-- Elarion's divination revealed "failure" if the deal with Ghul'Vor proceeded
-- Duskryn cast Calm Emotions to pacify most of the party, preventing intervention
-- The Black Benediction ritual was performed, infusing Duskryn's soul into a mirror
-- Ghul'Vor killed Duskryn's body with an axe after the ritual
-- Divine intervention from an angelic figure offered one chance to save Duskryn
-- Ghul'Vor shattered the mirror, opening a reality rift that began pulling everything in
+## Player Characters Present
+- **Duskryn Nightwarden** - Twilight Cleric - Status: dead (soul trapped)
+  - HP: 0/max
+  - Conditions: dead, soul separated from body
+  - Location: soul trapped in mirror realm
+- **Elarion** - Divination Wizard - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Theater of Blood
+- **Pork** - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Theater of Blood
+- **Albrit** - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Theater of Blood
 
-## NPCs
-- **Ghul'Vor** - Ex-god of darkness, son of Elarion's god of balance, offered to grant desires in exchange for an Eldereth
-- **Ghul'Vor's Twin Servants** - Counterspelled party attempts to intervene
-- **Divine Figure** - Woman in gray robes with angelic wings, declared Duskryn's soul could still be saved
+## NPCs Encountered
+- **Ghul'Vor** - Ex-god of darkness - First Appearance: Session [40]
+  - Description: Son of Elarion's god of balance, powerful entity seeking Eldarith
+  - Disposition: hostile
+  - Notable Actions: Performed Black Benediction ritual, killed Duskryn's body, opened reality rift
+- **Ghul'Vor's Twin Servants** - Magical servants - First Appearance: Session [40]
+  - Description: Twin magical beings serving Ghul'Vor
+  - Disposition: hostile
+  - Notable Actions: Counterspelled party attempts to intervene in ritual
+- **Divine Figure** - Angelic entity - First Appearance: Session [40]
+  - Description: Woman in gray robes with angelic wings
+  - Disposition: helpful
+  - Notable Actions: Offered chance to save Duskryn, declared his soul could still be saved
 
 ## Locations Visited
-- **Theater of Blood** - Locked location where the ritual took place, contains servants who may have been transformed
+- **Theater of Blood** - Dungeon/ritual site
+  - Description: Locked location where the Black Benediction ritual took place
+  - Notable Features: Contains servants who may have been transformed
+  - Entities Present: Ghul'Vor, his servants, the party
 
-## Combat/Encounters
-- Counterspell battle - Ghul'Vor's servants vs party (party unable to break through)
-- Black Benediction ritual - Resulted in Duskryn's death
-- Reality rift - Saving throws required to avoid being pulled in
+## Key Events
+### Event 1: Divine Warning
+- **Time**: Before the ritual
+- **Location**: Theater of Blood
+- **Participants**: Elarion, Duskryn, party
+- **Description**: Elarion's divination revealed "failure" if the deal with Ghul'Vor proceeded
+- **Outcome**: Warning was ignored by Duskryn
+- **Consequences**: Duskryn proceeded despite clear divine warning
 
-## Character Decisions
-- **Duskryn**: Chose to give up his Eldereth despite warnings, resulting in his death and soul imprisonment
-- **Elarion**: Attempted to banish Duskryn but failed due to +19 charisma save
-- **Pork**: Used Thunderstep to move Duskryn's body 90 feet from the mirror
-- **Albrit**: Attempted Sickening Radiance on Ghul'Vor (counterspelled)
+### Event 2: Calm Emotions Manipulation
+- **Time**: During party debate
+- **Location**: Theater of Blood
+- **Participants**: Duskryn, entire party
+- **Description**: Duskryn cast Calm Emotions to pacify most of the party, preventing intervention
+- **Outcome**: Party was unable to stop Duskryn from proceeding
+- **Consequences**: Removed party's ability to intervene effectively
 
-## Spells/Abilities Used
-- Divination by Elarion - Revealed "failure" warning
-- Calm Emotions by Duskryn - Pacified most of the party
-- Sickening Radiance by Albrit - Counterspelled
-- Banishment by Elarion - Failed due to high save
-- Thunderstep by Pork - Successfully moved Duskryn's body
+### Event 3: The Black Benediction Ritual
+- **Time**: Climax of session
+- **Location**: Theater of Blood
+- **Participants**: Duskryn, Ghul'Vor
+- **Description**: Catastrophic ritual performed, infusing Duskryn's soul into a mirror
+- **Outcome**: Duskryn's soul trapped, body killed by Ghul'Vor's axe
+- **Consequences**: Soul separation, opened path to potential rescue
 
-## Cliffhanger/Next Session Hook
-The party must decide whether to enter the cosmic rift to save Duskryn's soul, knowing they cannot force him to return - he must choose to come back willingly.
+### Event 4: Divine Intervention
+- **Time**: After Duskryn's death
+- **Location**: Theater of Blood
+- **Participants**: Divine Figure, party, Ghul'Vor
+- **Description**: Angelic figure appeared, offered one chance to save Duskryn
+- **Outcome**: Opportunity presented for rescue mission
+- **Consequences**: Reality rift opened when Ghul'Vor shattered the mirror
 
-## Fun Moments/Quotes
-- "Followed because all this god business is bullshit, and I just wanted to see if it was legit. Ain't that right, Albrit?" - Willow
-- "Damn. It turned you into Helen Keller" - Pork (about Zivu losing senses)
-- "You guys are all my friends. We're the silly geese together" - Duskryn
-- "Dusk is literally Anakin turning to the dark side going from my perspective, the Jedi are evil" - Party member
-- "This is the Chimera Ant stair arc right now" - Reference to the counterspell chain
+## Combat Encounters
+### Encounter 1: Counterspell Battle
+- **Location**: Theater of Blood
+- **Enemies**: Ghul'Vor's Twin Servants
+- **Initiative Order**: Unknown
+- **Tactics**: Servants focused on counterspelling party intervention attempts
+- **Damage Dealt**: None recorded
+- **Damage Taken**: None recorded
+- **Killing Blow**: None - party unable to break through defenses
+- **Outcome**: Party prevented from stopping ritual
+
+### Encounter 2: Reality Rift Crisis
+- **Location**: Theater of Blood
+- **Enemies**: Environmental hazard (reality rift)
+- **Initiative Order**: Saving throw sequence
+- **Tactics**: Party had to make saving throws to avoid being pulled into rift
+- **Damage Dealt**: None
+- **Damage Taken**: Unknown
+- **Killing Blow**: N/A
+- **Outcome**: Party survived but faced choice of entering rift
+
+## Spells & Abilities Used
+- **Divination** - Cast by: Elarion
+  - Target(s): Future events regarding Ghul'Vor deal
+  - Save DC: N/A
+  - Effect: Revealed "failure" would result from proceeding
+  - Success: Yes - clear warning received
+  - Duration: Instant
+
+- **Calm Emotions** - Cast by: Duskryn
+  - Target(s): Entire party
+  - Save DC: Unknown
+  - Effect: Pacified most of the party, preventing intervention
+  - Success: Yes - party was calmed
+  - Duration: Duration of ritual debate
+
+- **Sickening Radiance** - Cast by: Albrit
+  - Target(s): Ghul'Vor
+  - Save DC: Unknown
+  - Effect: Counterspelled before taking effect
+  - Success: No - counterspelled
+  - Duration: N/A
+
+- **Banishment** - Cast by: Elarion
+  - Target(s): Duskryn
+  - Save DC: Unknown (Duskryn had +19 charisma save)
+  - Effect: Attempted to banish Duskryn to prevent ritual
+  - Success: No - Duskryn saved
+  - Duration: N/A
+
+- **Thunderstep** - Cast by: Pork
+  - Target(s): Duskryn's body (movement)
+  - Save DC: N/A
+  - Effect: Successfully moved Duskryn's body 90 feet from the mirror
+  - Success: Yes
+  - Duration: Instant
+
+## Character Decisions & Motivations
+### Duskryn
+- **Decision**: Give up his Eldarith to Ghul'Vor despite divine warnings
+- **Context**: Offered deal by ex-god, warned of failure by divination
+- **Motivation**: Believed he was acting of his own free will, not under control
+- **Party Reaction**: Attempted to stop him through spells and intervention
+- **Consequences**: Death, soul imprisonment, reality rift opening
+
+### Elarion
+- **Decision**: Attempt to stop Duskryn through divination warning and banishment
+- **Context**: Received divine warning of failure, tried multiple intervention methods
+- **Motivation**: Protect party member from obvious catastrophic outcome
+- **Party Reaction**: Supported by others trying to intervene
+- **Consequences**: All attempts failed, witnessed friend's destruction
+
+### Pork
+- **Decision**: Use Thunderstep to move Duskryn's body away from danger
+- **Context**: After Duskryn was killed and soul trapped
+- **Motivation**: Preserve what remained of party member
+- **Party Reaction**: Practical action appreciated
+- **Consequences**: Body moved to safety, preserved for potential rescue
+
+## Cliffhanger/Session End
+**Ending Scene**: Ghul'Vor shattered the mirror containing Duskryn's soul, opening a massive reality rift that began pulling everything into it. The divine figure offered the party one chance to save their friend.
+
+**Cliffhanger**: The party must decide whether to enter the cosmic rift to save Duskryn's soul, knowing they cannot force him to return - he must choose to come back willingly.
+
+## Next Session Hooks
+- Enter the reality rift to attempt Duskryn's rescue
+- Face whatever challenges exist in the mirror realm
+- Convince Duskryn to return despite his choices
+
+## Memorable Quotes
+- "Followed because all this god business is bullshit, and I just wanted to see if it was legit. Ain't that right, Albrit?" - Willow, Context: Explaining motivation for being present
+- "Damn. It turned you into Helen Keller" - Pork, Context: About Zivu losing senses
+- "You guys are all my friends. We're the silly geese together" - Duskryn, Context: Speaking to party before ritual
+- "Dusk is literally Anakin turning to the dark side going from my perspective, the Jedi are evil" - Party member, Context: Comparing situation to Star Wars
+- "This is the Chimera Ant stair arc right now" - Reference to the counterspell chain, Context: Describing the back-and-forth counterspell battle
+
+## Fun Moments
+- Party member comparing Duskryn to Anakin Skywalker turning to the dark side
+- Reference to Hunter x Hunter's Chimera Ant arc during counterspell battle
+- Pork's blunt commentary about characters losing senses
+
+## DM Notes
+- Black Benediction ritual successfully completed despite party intervention
+- Divine intervention provides rescue opportunity
+- Reality rift mechanic introduced for next session
+- Duskryn's player will need new character dynamics for rescue scenario
+
+## Meta Information
+- **Session Length**: Unknown
+- **XP Awarded**: Unknown
+- **Milestone**: Major character death/transformation event
+- **Next Session Date**: Unknown
