--- a/knowledge_base/session_notes/08-06-2025.md
+++ b/knowledge_base/session_notes/08-06-2025.md
@@ -1,104 +1,272 @@
-# Session 41 - Into the Soul Cairn
-Date: 2025-01-35 (Tuesday, Lunari)
+# Session [41] - Into the Soul Cairn
+Date: 2025-08-06
 
 ## Summary
 The party entered a cosmic rift to save Duskryn's soul from being consumed by soul leeches after Ghul'vor the Undying completed the Black Benediction ritual. Inside a Soul Cairn—a liminal space between life and death—they faced a Soul Harvester and its minions while attempting to solve a color-coded lantern puzzle. Meanwhile, Duskryn experienced powerful memories from his past as his soul weakened with each passing moment, trapped within a dark red crystalline bloom.
 
-## Duskryn's Current State
+## Player Characters Present
+- **Duskryn Nightwarden** - Twilight Cleric - Status: soul form (dying)
+  - HP: 12/17 (soul HP, losing 4 per round)
+  - Conditions: soul separated from body, being drained by soul leeches
+  - Location: trapped in dark red crystal rose at center of Soul Cairn
+- **Pork** - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Soul Cairn
+- **Willow** - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Soul Cairn
+- **Zivu** - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Soul Cairn
+- **Albrit** - Status: alive
+  - HP: unknown/max
+  - Conditions: none
+  - Location: Soul Cairn
+
+## NPCs Encountered
+- **Ghul'vor the Undying** - Ex-god of darkness - First Appearance: Session [40]
+  - Description: Former deity who completed the Black Benediction ritual
+  - Disposition: hostile (fled this session)
+  - Notable Actions: Completed ritual that separated Duskryn's soul from body
+- **Ethernea** - Divine entity - First Appearance: Session [41]
+  - Description: Angelic figure with gray robes, dark black wings, black longsword
+  - Disposition: helpful
+  - Notable Actions: Interrupted ritual, created rift to Soul Cairn, pursued Ghul'vor
+- **High Acolyte Aldric** - Spirit/mentor - First Appearance: Session [41]
+  - Description: Dwarf with blue skin, Duskryn's former mentor, appears as semi-opaque spirit
+  - Disposition: helpful
+  - Notable Actions: Entered Soul Cairn to help rescue mission despite Zivu's initial rejection
+
+## Locations Visited
+- **Soul Cairn** - Liminal plane
+  - Description: Space between life and death with floating debris connected by golden chains
+  - Notable Features: Dark red crystalline bloom at center, floating lanterns, no ground or sky
+  - Entities Present: Soul Harvester, soul leeches, party, Duskryn's soul
+
+## Key Events
+### Event 1: Entry into Soul Cairn
+- **Time**: Start of session
+- **Location**: Reality rift leading to Soul Cairn
+- **Participants**: Entire party
+- **Description**: Party jumped through rift created by wound in reality to rescue Duskryn
+- **Outcome**: Successfully entered the Soul Cairn dimension
+- **Consequences**: Now trapped in liminal space with time limit to save Duskryn
+
+### Event 2: Soul Harvester Encounter
+- **Time**: Upon arrival
+- **Location**: Soul Cairn
+- **Participants**: Party, Soul Harvester
+- **Description**: Legendary arbiter of soul leeches appeared with 5 colored lanterns
+- **Outcome**: Combat initiated with puzzle element
+- **Consequences**: Party must solve lantern puzzle while fighting
+
+### Event 3: Lantern Puzzle Discovery
+- **Time**: During combat
+- **Location**: Soul Cairn
+- **Participants**: Party, Soul Harvester
+- **Description**: Pork destroyed blue lantern causing reset, revealing color sequence puzzle
+- **Outcome**: Party discovered lantern colors correspond to Black Benediction words
+- **Consequences**: Must solve puzzle to potentially stop soul draining
+
+### Event 4: Duskryn's Memory Experiences
+- **Time**: Throughout session
+- **Location**: Soul Cairn (Duskryn's perspective)
+- **Participants**: Duskryn's soul
+- **Description**: Experienced powerful memories from joining Priory and knighting ceremony
+- **Outcome**: Revealed significant character background and emotional connections
+- **Consequences**: Memories may influence his choice to return
+
+### Event 5: High Acolyte Aldric's Arrival
+- **Time**: End of session
+- **Location**: Soul Cairn
+- **Participants**: Aldric's spirit, party
+- **Description**: Duskryn's mentor appeared as spirit to help despite Zivu's initial refusal
+- **Outcome**: Additional ally arrived for rescue mission
+- **Consequences**: Reinforcements for final push to save Duskryn
+
+## Combat Encounters
+### Encounter 1: Soul Harvester and Soul Leeches
+- **Location**: Soul Cairn
+- **Enemies**: Soul Harvester (legendary), Soul Leeches (4), additional spawned enemies
+- **Initiative Order**: Unknown
+- **Tactics**: Soul Harvester uses beam attacks, controls lanterns; soul leeches drain Duskryn's essence
+- **Damage Dealt**:
+  - Willow: Summoned 10 zombies using Eldarith of Chaos
+  - Party: Various attacks on Soul Harvester and leeches
+- **Damage Taken**:
+  - Party members: 30 force damage from beam attack (15 on successful save, DC 18 DEX)
+  - Duskryn: 4 HP per round from soul leech draining
+- **Killing Blow**: None yet - encounter ongoing
+- **Outcome**: Ongoing - party fighting while solving puzzle
+
+## Spells & Abilities Used
+- **Eldarith of Chaos** - Cast by: Willow
+  - Target(s): Soul Cairn battlefield
+  - Save DC: N/A
+  - Effect: Summoned 10 zombies to protect party and Duskryn
+  - Success: Yes
+  - Duration: Until destroyed or dismissed
+
+## Character Decisions & Motivations
+### Entire Party
+- **Decision**: Enter the cosmic rift to save Duskryn despite dangers
+- **Context**: Duskryn's soul trapped and dying, only one chance offered by divine intervention
+- **Motivation**: Loyalty to party member despite his poor choices
+- **Party Reaction**: Unanimous decision to attempt rescue
+- **Consequences**: Now trapped in Soul Cairn with limited time
+
+### Zivu
+- **Decision**: Initially reject High Acolyte Aldric's help
+- **Context**: Belief that Duskryn chose his path and should face consequences
+- **Motivation**: "As a soldier, if there's no trust between allies, the battle's already lost"
+- **Party Reaction**: Understanding but continued with rescue mission
+- **Consequences**: Aldric still chose to help despite rejection
+
+### Pork
+- **Decision**: Destroy the blue lantern during combat
+- **Context**: Fighting Soul Harvester, trying to disrupt its abilities
+- **Motivation**: "I jumped through not to help Dusk, but to help everyone else"
+- **Party Reaction**: Caused reset that revealed puzzle mechanism
+- **Consequences**: Accidentally discovered the puzzle solution pattern
+
+### Willow
+- **Decision**: Summon zombies to specifically protect "this piece of shit" (Duskryn)
+- **Context**: Soul leeches draining Duskryn's essence while party fights
+- **Motivation**: Despite calling him names, still wants to save him
+- **Party Reaction**: Practical defensive action appreciated
+- **Consequences**: Provided protection for Duskryn's soul during combat
+
+## Memories, Visions & Dreams
+### Duskryn's Memory: Acceptance into the Priory
+- **Type**: Memory
+- **Content**: Young Duskryn standing on rain-slicked cobblestones, clutching oversized satchel with all belongings. Mother kneeling before him with tears, father standing with arm around mother. Member of Priory to Ethernea beckoning toward large wooden gate.
+- **Emotional Context**: Bittersweet moment of leaving family for religious calling
+- **Significance**: Represents his entry into religious life and devotion to Ethernea
+- **Reveals**: 
+  - Duskryn's early dedication to faith
+  - Sacrifice he made leaving family for religious service
+
+### Duskryn's Memory: Knighting Ceremony
+- **Type**: Memory
+- **Content**: Sacred cathedral atop Twilight Hold with violet and purple sky, golden flames, and stained sunlight. Older but still uncertain Duskryn in clean ceremonial armor with silver Ethernea symbol. Knighted by High Acolyte Aldric with titles "Warden of Light's Last Breath," "Guardian of Twilight," and "Balance Amongst the Dark."
+- **Emotional Context**: Eyes filled with tears of pride and joy, ceremony ended with deep embrace from Aldric
+- **Significance**: Moment of achieving his religious calling and purpose
+- **Reveals**:
+  - Deep bond between Duskryn and Aldric
+  - His official titles and religious significance
+  - Connection to Ethernea's divine purpose
+
+## Puzzles & Mysteries
+### Puzzles Encountered
+- **Lantern Color Puzzle**
+  - Description: Five colored lanterns controlled by Soul Harvester correspond to Black Benediction ritual words
+  - Solution: Must activate lanterns in correct sequence based on ritual components
+  - Solver: Party working together (discovery by Pork's destruction of blue lantern)
+
+### Color Associations Discovered
+- Red - Power
+- Black - Vengeance  
+- Yellow - Redemption
+- Blue - Honor
+- Purple/Pink - Love
+
+### Activation Sequences Observed
+1. Red → Black → Yellow → Blue → Purple
+2. Purple → Red → Black → Yellow → Blue  
+3. Black → Red → Yellow → Blue → Purple
+
+### Mysteries & Revelations
+- **Revealed**: Soul Cairn exists as liminal space between life and death
+  - Details: Floating debris connected by golden chains, no traditional ground or sky
+  - Implications: Represents boundary between mortal existence and afterlife
+- **Revealed**: Duskryn's soul can influence battle despite separation from body
+  - Details: Blood Shield, Memory Surge, and Snare abilities available
+  - Implications: Soul retains some agency and power in this realm
+- **Unresolved**: Whether correct lantern sequence will free Duskryn or stop soul draining
+  - Clues Found: Multiple sequence patterns observed
+  - Theories: Different sequences may have different effects
+
+## Divine & Religious Elements
+### Divine Interventions
+- **Deity**: Ethernea
+  - Avatar/Method: Appeared as angelic figure with gray robes, dark wings, black longsword
+  - Message: "Dusk's soul is not yet forsaken" and "the pact may yet be broken if those who are still would fight for him"
+  - Purpose: Provide opportunity for rescue while pursuing Ghul'vor
+
+### Religious/Ritual Events
+- **Black Benediction Aftermath**
+  - Performer: Ghul'vor (completed previous session)
+  - Purpose: Unseat Eldarith wielder, consume worthy soul, elevate divine status
+  - Result: Soul separation and creation of rescue opportunity
+
+## Party Dynamics
+### Conflicts
+- **Between**: Zivu and the rescue mission concept
+  - Issue: Belief that Duskryn chose his path and should face consequences alone
+  - Resolution: Aldric chose to help anyway, party continued mission
+
+### Bonds Strengthened
+- **Between**: Party members and Duskryn (despite frustration)
+  - Event: All chose to risk themselves entering Soul Cairn for rescue
+  - Nature: Loyalty transcending individual poor decisions
+
+## Dice Rolls of Note
+- **Duskryn**: Soul HP roll - Rolled poorly on d100, started with only 17 HP
+  - Context: Determining soul strength upon separation from body
+  - Result: Critically low starting health made time pressure extreme
+
+## Memorable Quotes
+- "Dusk's soul is not yet forsaken" - Ethernea, Context: Declaring rescue still possible
+- "You are no longer an apprentice, but a sword" - High Acolyte Aldric to young Dusk, Context: During knighting ceremony memory
+- "Warden of Light's Last Breath, Guardian of Twilight, and a Balance Amongst the Dark" - Duskryn's official titles, Context: Knighting ceremony
+- "He must eventually choose himself if he wants to return" - Ethernea's warning, Context: Explaining rescue limitations
+- "At least for me, I'm going to make sure that no man is left behind" - High Acolyte Aldric, Context: Philosophy about helping Duskryn
+- "Until we meet upon the shores of the dark one's paradise again" - High Acolyte Aldric's farewell, Context: Parting words to Zivu
+- "Dusk has chosen his path... as a soldier, if there's no trust between allies, the battle's already lost" - Zivu's rejection, Context: Explaining reluctance to help
+- "I jumped through not to help Dusk, but to help everyone else... Fuck Dusk" - Pork's motivation, Context: Explaining why he entered rift
+- "this piece of shit" - Willow about Duskryn, Context: While summoning zombies to protect him
+
+## Cliffhanger/Session End
+**Ending Scene**: High Acolyte Aldric's spirit tumbled ungracefully through blood in heavy plate armor, entering the Soul Cairn to help despite Zivu's rejection. Duskryn's soul continues losing 4 HP per round while party fights Soul Harvester and attempts to solve the lantern puzzle.
+
+**Cliffhanger**: With Duskryn's soul at only 12/17 HP and losing 4 HP per round, time is running out. The party must solve the lantern puzzle while defending against waves of soul leeches. Even if they succeed, Duskryn must ultimately choose whether to return—no one can force him.
+
+## Next Session Hooks
+- Solve the lantern color puzzle to stop soul draining
+- Defend against Soul Harvester and increasing waves of soul leeches
+- Convince Duskryn to choose to return to life
+- Escape the Soul Cairn before being trapped permanently
+
+## DM Notes
+- Soul drain mechanic creates urgent time pressure
+- Lantern puzzle provides multiple solution paths
+- Duskryn's memories reveal deep character background
+- High Acolyte Aldric's spirit provides mentor figure
+- Two divine interventions in one day noted as extremely rare
+- Player agency important - Duskryn must choose to return
+
+## Meta Information
+- **Session Length**: Unknown  
+- **XP Awarded**: Unknown
+- **Milestone**: Entered Soul Cairn, major rescue mission
+- **Next Session Date**: Unknown
+
+---
+
+## Raw Notes Section
+
+### Duskryn's Current Physical State
 - **Physical Body**: Lifeless corpse carried by Pork
   - Large gash wound across the top of neck
-  - Deep puncture wound in chest (from Eldarith)
+  - Deep puncture wound in chest (from Eldarith)  
   - Skin turned from lively gray to sullen and dark
   - Beard drenched in his own blood
   - Chain mail frayed and cracked
-- **Soul**: Trapped in dark red crystal rose at center of Soul Cairn
-  - Semi-transparent, flickering like a dying flame
-  - Starting HP: 17 (rolled poorly on d100)
-  - Current HP: 12 (after soul leech draining)
-  - Losing 4 HP per round to soul leeches
-  - Can perceive the battlefield around him
 
-## The Black Benediction Incident
-- Duskryn willingly gave his Eldarith to Ghul'vor despite warnings
-- Ignored divination result of "failure" from Dharuri (old gods)
-- Claimed he was acting of his own free will, not under Ghul'vor's control
-- Ghul'vor drove the Eldarith directly into Dusk's chest, severing body from soul
-- Dusk's soul was pulled into a mirror and bound within it
-- Ritual was meant to:
-  - Unseat the wielder of an Eldarith
-  - Consume the soul of a worthy servant
-  - Help elevate Ghul'Vors's divine status
-
-## Ethernea's Intervention
-- **Appearance**: Angelic figure who broke into Ghul'vor's dimension
-  - Gray robes
-  - Dark black wings
-  - Black longsword
-  - Caused flood of gray, dull light
-- **Actions**:
-  - Interrupted the Black Benediction ritual
-  - Declared "Dusk's soul is not yet forsaken"
-  - Said "the pact may yet be broken if those who are still would fight for him"
-  - Pursued Ghul'vor when he fled
-  - Created/revealed the rift to the Soul Cairn
-- **Key Messages**:
-  - "Beyond this gate lies Duskryn's soul"
-  - "It drifts among fragments of his truth, some of it beautiful and yet some of it very painful"
-  - "If you would save him, walk through"
-  - "He must choose to return, and you cannot drag him out"
-- **Divine Significance**: Two visits from Ethernea in one day was noted as extremely rare by High Acolyte Aldric
-
-## Duskryn's Memories & Visions
-### Memory 1: Acceptance into the Priory
-- Young Duskryn with much younger hands
-- Standing on rain-slicked cobblestones
-- Clutching oversized satchel with all belongings
-- Mother kneeling before him, cheeks stained with tears
-- Father standing above with arm around mother
-- Member of Priory to Ethernea beckoning toward large wooden gate
-- Represents his entry into religious life
-
-### Memory 2: Knighting Ceremony
-- Location: Sacred cathedral atop Twilight Hold
-  - High upon clouds within sacred holds
-  - Beautiful violet and purple sky
-  - Golden yellow flames
-  - Stained sunlight through archway
-- Appearance: Older but still uncertain
-  - Shorter hair
-  - Clean, ceremonial armor (no wear and tear)
-  - Silver symbol of Ethernea on chest amulet
-- Ceremony: Knighted by High Acolyte Aldric
-  - Named "Warden of Light's Last Breath"
-  - Named "Guardian of Twilight"
-  - Named "Balance Amongst the Dark"
-  - No longer an apprentice, but a sword
-- Emotional state: Eyes filled with tears of pride and joy
-- Ended with deep embrace from Aldric
-
-## Duskryn's Soul Abilities
-As his consciousness fades in and out, Dusk can influence the battle:
-- **Blood Shield**: Impose disadvantage on one enemy
-- **Memory Surge**: Grant temp HP to ally (roll d6); on a 6, restore spell slot of 5th level or lower
-- **Snare** (new ability): Reach out and restrain one soul leech to prevent soul draining
-
-## High Acolyte Aldrich's Appearance
-- **Arrival**: Tumbled ungracefully through blood in heavy plate armor
-- **Appearance as Spirit**:
-  - Dwarf with blue skin and blue-graying beard
-  - Traditional robes of Ethernea (gray-blue-purple)
-  - Semi-opaque and glowing along silhouette
-  - Extremely cold to touch
-  - Sunken gray skin
-  - Bad wounds/old scars across shoulders/neck under armor
-- **Interaction with Zivu**:
-  - Recognized as Dusk's mentor
-  - Expressed surprise at two visits from Ethernea in one day
-  - Philosophy: "No man is left behind"
-  - Placed cold hand on Zivu's shoulder in encouragement
-  - Parting words: "Until we meet upon the shores of the dark one's paradise again"
-
-## The Soul Cairn Environment
+### Soul Cairn Environment Details
 - No ground or sky, just floating debris
 - Pieces of old stone and masonry connected by long golden chains
 - Dark red crystalline bloom (rose-shaped) at center containing Dusk's soul
@@ -106,56 +274,14 @@ As his consciousness fades in and out, Dusk can influence the battle:
 - Blood being pulled through the portal
 - Gothic mirror elements
 
-## Key Events
-- Party jumped through rift created by wound in reality
-- Soul Harvester appeared with 5 colored lanterns
-- Pork destroyed blue lantern, causing reset and spawning more enemies
-- Willow summoned 10 zombies using Eldarith of Chaos
-- Soul leeches began physically draining Dusk's essence
-- Aldrich's spirit appeared to help despite Zivu's refusal
-- Party discovered lantern colors correspond to Black Benediction words
+### Soul Harvester Details
+- **Appearance**: Multiple limbs from every orifice
+- **Abilities**: Commands 5 floating lanterns, makes bell sounds instead of speech
+- **Attack**: 150-foot lines of colored light (beam attack)
+- **Damage**: 30 force damage (failed DC 18 DEX), 15 on success
 
-## Combat/Encounters
-- **Soul Harvester**: Legendary arbiter of soul leeches
-  - Multiple limbs from every orifice
-  - Commands 5 floating lanterns
-  - Makes bell sounds instead of speech
-  - Beam attack: 150-foot lines of colored light
-- **Soul Leeches**: Larger than normal variants
-  - Normally small, gremlin-like on Material Plane
-  - Feed on souls, congregate around death
-  - 4 currently draining Dusk's soul
-- **Damage Tracking**:
-  - Beam attack: 30 force damage (failed DC 18 DEX), 15 on success
-  - Soul drain: 4 HP per round from Dusk
-  - Dusk's soul: 12/17 HP remaining
-
-## The Lantern Puzzle
-**Colors & Associations** (from Black Benediction):
-- Red - Power
-- Black - Vengeance
-- Yellow - Redemption
-- Blue - Honor
-- Purple/Pink - Love
-
-**Activation Sequences Observed**:
-1. Red → Black → Yellow → Blue → Purple
-2. Purple → Red → Black → Yellow → Blue
-3. Black → Red → Yellow → Blue → Purple
-
-## Party Dynamics & Dusk
-- **Zivu's Rejection**: "Dusk has chosen his path... as a soldier, if there's no trust between allies, the battle's already lost"
-- **Pork's Motivation**: "I jumped through not to help Dusk, but to help everyone else... Fuck Dusk"
-- **Willow's Defense**: Summoned zombies specifically to protect "this piece of shit"
-- **Party Recognition**: Despite anger, they're still trying to save him
-
-## Cliffhanger/Next Session Hook
-With Dusk's soul at 12 HP and losing 4 HP per round, time is running out. High Acolyte Aldric's spirit is entering the Soul Cairn. The party must solve the lantern puzzle while defending against waves of soul leeches. Dusk must ultimately choose whether to return—no one can force him.
-
-## Notable Quotes About Dusk/Ethernea
-- "Dusk's soul is not yet forsaken" - Ethernea
-- "You are no longer an apprentice, but a sword" - High Acolyte Aldric to young Dusk
-- "Warden of Light's Last Breath, Guardian of Twilight, and a Balance Amongst the Dark" - Dusk's titles
-- "He must eventually choose himself if he wants to return" - Ethernea's warning
-- "At least for me, I'm going to make sure that no man is left behind" - High Acolyte Aldric about Dusk
-- "Until we meet upon the shores of the dark one's paradise again" - High Acolyte Aldric's farewell
+### High Acolyte Aldric Spirit Details
+- **Appearance**: Dwarf with blue skin and blue-graying beard
+- **Clothing**: Traditional robes of Ethernea (gray-blue-purple), heavy plate armor
+- **Spiritual Form**: Semi-opaque and glowing along silhouette, extremely cold to touch
+- **Physical State**: Sunken gray skin, bad wounds/old scars across shoulders/neck under armor
