Refactor and reorganize project structure
- Removed the evaluation script (3_run_evaluation.py) as it is no longer needed.
- Added a new audit script (audit_templates.py) to analyze template coverage and identify gaps.
- Updated dataset generation script (generate_dataset.py) to include comprehensive label mappings and validation checks.
- Deleted test script for System 1 (test_system1.py) as it is redundant.
- Removed setup scripts (setup.bat and setup.sh) as they are no longer applicable.
- Deleted shared components (result_enhancer.py and __init__.py) that are not in use.

--- a/574-Assignment/notebooks/02_joint_model_training.ipynb
+++ b/574-Assignment/notebooks/02_joint_model_training.ipynb
@@ -54,10 +54,28 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "\n",
-    "# Set paths\n",
-    "DRIVE_PATH = '/content/drive/MyDrive/574-assignment'\n",
-    "DATA_PATH = f'{DRIVE_PATH}/data'\n",
-    "MODEL_PATH = f'{DRIVE_PATH}/models/joint_deberta'"
+    "# Setup paths for Google Colab\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "PROJECT_ROOT = Path('/content/drive/MyDrive/574-assignment')\n",
+    "DATA_PATH = PROJECT_ROOT / 'data' / 'generated'\n",
+    "MODEL_PATH = PROJECT_ROOT / 'models' / 'joint_deberta'\n",
+    "\n",
+    "# Ensure model output directory exists\n",
+    "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(f\"Project root: {PROJECT_ROOT}\")\n",
+    "print(f\"Data path: {DATA_PATH}\")\n",
+    "print(f\"Model path: {MODEL_PATH}\")\n",
+    "\n",
+    "# Verify data files exist\n",
+    "print(\"\\nChecking data files:\")\n",
+    "for f in ['train.json', 'val.json', 'test.json', 'label_mappings.json']:\n",
+    "    if (DATA_PATH / f).exists():\n",
+    "        print(f\"  ✓ Found {f}\")\n",
+    "    else:\n",
+    "        print(f\"  ✗ Missing {f} - please upload to Google Drive\")"
    ]
   },
   {
@@ -72,7 +90,7 @@
     "import torch.nn.functional as F\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import (\n",
-    "    DebertaV2Tokenizer,\n",
+    "    DebertaV2TokenizerFast,  # Use Fast tokenizer for offset_mapping support\n",
     "    DebertaV2Model,\n",
     "    DebertaV2PreTrainedModel,\n",
     "    get_linear_schedule_with_warmup,\n",
@@ -204,10 +222,10 @@
    "source": [
     "def load_dataset(split='train'):\n",
     "    \"\"\"Load dataset from JSON file.\"\"\"\n",
-    "    path = f'{DATA_PATH}/{split}.json'\n",
+    "    path = DATA_PATH / f'{split}.json'\n",
     "    with open(path, 'r') as f:\n",
     "        data = json.load(f)\n",
-    "    print(f\"Loaded {len(data)} {split} samples\")\n",
+    "    print(f\"Loaded {len(data)} {split} samples from {path}\")\n",
     "    return data\n",
     "\n",
     "train_data = load_dataset('train')\n",
@@ -468,13 +486,12 @@
     "            intent_loss = F.binary_cross_entropy_with_logits(intent_logits, intent_labels)\n",
     "        \n",
     "        if ner_labels is not None:\n",
-    "            # Create mask for valid tokens (not -100)\n",
-    "            valid_mask = (ner_labels != -100)\n",
-    "            # Replace -100 with 0 for CRF (will be masked anyway)\n",
+    "            # Use attention_mask for CRF (must have first token = True)\n",
+    "            # Replace -100 labels with 0 (O tag) for CRF computation\n",
     "            ner_labels_clean = ner_labels.clone()\n",
-    "            ner_labels_clean[~valid_mask] = 0\n",
-    "            # CRF loss (negative log likelihood)\n",
-    "            ner_loss = -self.crf(ner_emissions, ner_labels_clean, mask=valid_mask, reduction='mean')\n",
+    "            ner_labels_clean[ner_labels == -100] = 0\n",
+    "            # CRF loss (negative log likelihood) - use attention_mask, not label-based mask\n",
+    "            ner_loss = -self.crf(ner_emissions, ner_labels_clean, mask=attention_mask.bool(), reduction='mean')\n",
     "        \n",
     "        if tool_loss is not None and intent_loss is not None and ner_loss is not None:\n",
     "            loss = (\n",
@@ -513,7 +530,7 @@
    "source": [
     "# Load tokenizer and config\n",
     "print(f\"Loading model: {CONFIG['model_name']}\")\n",
-    "tokenizer = DebertaV2Tokenizer.from_pretrained(CONFIG['model_name'])\n",
+    "tokenizer = DebertaV2TokenizerFast.from_pretrained(CONFIG['model_name'])\n",
     "config = AutoConfig.from_pretrained(CONFIG['model_name'])\n",
     "config.classifier_dropout = CONFIG['classifier_dropout']\n",
     "\n",
@@ -1288,7 +1305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
+    "<cell_type>markdown</cell_type>## Summary\n",
     "\n",
     "This notebook trains a **joint DeBERTa-v3 model** that performs three tasks simultaneously:\n",
     "\n",
@@ -1301,10 +1318,10 @@
     "- **CRF layer** for NER ensures valid BIO tag sequences\n",
     "- **Layer-wise learning rate decay** - higher LR for classification heads\n",
     "- **Early stopping** based on combined F1 score\n",
-    "- **Google Drive persistence** for Colab\n",
+    "- **Local file access** via VS Code Colab extension (relative paths)\n",
     "\n",
     "### Model saved to:\n",
-    "- `{DRIVE_PATH}/models/joint_deberta/`"
+    "- `models/joint_deberta/`"
    ]
   }
  ],
